# serializer version: 1
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.1
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.10
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.11
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at",
         "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organizationmembership"
  INNER JOIN "clairview_organization" ON ("clairview_organizationmembership"."organization_id" = "clairview_organization"."id")
  WHERE "clairview_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.12
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_annotation"
  WHERE (NOT "clairview_annotation"."deleted"
         AND (("clairview_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "clairview_annotation"."scope" = 'organization')
              OR "clairview_annotation"."team_id" = 2))
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.13
  '''
  SELECT "clairview_annotation"."id",
         "clairview_annotation"."content",
         "clairview_annotation"."created_at",
         "clairview_annotation"."updated_at",
         "clairview_annotation"."dashboard_item_id",
         "clairview_annotation"."dashboard_id",
         "clairview_annotation"."team_id",
         "clairview_annotation"."organization_id",
         "clairview_annotation"."created_by_id",
         "clairview_annotation"."scope",
         "clairview_annotation"."creation_type",
         "clairview_annotation"."date_marker",
         "clairview_annotation"."deleted",
         "clairview_annotation"."apply_all",
         "clairview_dashboarditem"."id",
         "clairview_dashboarditem"."name",
         "clairview_dashboarditem"."derived_name",
         "clairview_dashboarditem"."description",
         "clairview_dashboarditem"."team_id",
         "clairview_dashboarditem"."filters",
         "clairview_dashboarditem"."filters_hash",
         "clairview_dashboarditem"."query",
         "clairview_dashboarditem"."order",
         "clairview_dashboarditem"."deleted",
         "clairview_dashboarditem"."saved",
         "clairview_dashboarditem"."created_at",
         "clairview_dashboarditem"."refreshing",
         "clairview_dashboarditem"."created_by_id",
         "clairview_dashboarditem"."is_sample",
         "clairview_dashboarditem"."short_id",
         "clairview_dashboarditem"."favorited",
         "clairview_dashboarditem"."refresh_attempt",
         "clairview_dashboarditem"."last_modified_at",
         "clairview_dashboarditem"."last_modified_by_id",
         "clairview_dashboarditem"."dashboard_id",
         "clairview_dashboarditem"."last_refresh",
         "clairview_dashboarditem"."layouts",
         "clairview_dashboarditem"."color",
         "clairview_dashboarditem"."dive_dashboard_id",
         "clairview_dashboarditem"."updated_at",
         "clairview_dashboarditem"."deprecated_tags",
         "clairview_dashboarditem"."tags",
         "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_annotation"
  LEFT OUTER JOIN "clairview_dashboarditem" ON ("clairview_annotation"."dashboard_item_id" = "clairview_dashboarditem"."id")
  LEFT OUTER JOIN "clairview_user" ON ("clairview_annotation"."created_by_id" = "clairview_user"."id")
  WHERE (NOT "clairview_annotation"."deleted"
         AND (("clairview_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "clairview_annotation"."scope" = 'organization')
              OR "clairview_annotation"."team_id" = 2))
  ORDER BY "clairview_annotation"."date_marker" DESC
  LIMIT 1000
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.2
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at",
         "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organizationmembership"
  INNER JOIN "clairview_organization" ON ("clairview_organizationmembership"."organization_id" = "clairview_organization"."id")
  WHERE "clairview_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.3
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_annotation"
  WHERE (NOT "clairview_annotation"."deleted"
         AND (("clairview_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "clairview_annotation"."scope" = 'organization')
              OR "clairview_annotation"."team_id" = 2))
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.4
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.5
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.6
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at",
         "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organizationmembership"
  INNER JOIN "clairview_organization" ON ("clairview_organizationmembership"."organization_id" = "clairview_organization"."id")
  WHERE "clairview_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.7
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_annotation"
  WHERE (NOT "clairview_annotation"."deleted"
         AND (("clairview_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "clairview_annotation"."scope" = 'organization')
              OR "clairview_annotation"."team_id" = 2))
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.8
  '''
  SELECT "clairview_annotation"."id",
         "clairview_annotation"."content",
         "clairview_annotation"."created_at",
         "clairview_annotation"."updated_at",
         "clairview_annotation"."dashboard_item_id",
         "clairview_annotation"."dashboard_id",
         "clairview_annotation"."team_id",
         "clairview_annotation"."organization_id",
         "clairview_annotation"."created_by_id",
         "clairview_annotation"."scope",
         "clairview_annotation"."creation_type",
         "clairview_annotation"."date_marker",
         "clairview_annotation"."deleted",
         "clairview_annotation"."apply_all",
         "clairview_dashboarditem"."id",
         "clairview_dashboarditem"."name",
         "clairview_dashboarditem"."derived_name",
         "clairview_dashboarditem"."description",
         "clairview_dashboarditem"."team_id",
         "clairview_dashboarditem"."filters",
         "clairview_dashboarditem"."filters_hash",
         "clairview_dashboarditem"."query",
         "clairview_dashboarditem"."order",
         "clairview_dashboarditem"."deleted",
         "clairview_dashboarditem"."saved",
         "clairview_dashboarditem"."created_at",
         "clairview_dashboarditem"."refreshing",
         "clairview_dashboarditem"."created_by_id",
         "clairview_dashboarditem"."is_sample",
         "clairview_dashboarditem"."short_id",
         "clairview_dashboarditem"."favorited",
         "clairview_dashboarditem"."refresh_attempt",
         "clairview_dashboarditem"."last_modified_at",
         "clairview_dashboarditem"."last_modified_by_id",
         "clairview_dashboarditem"."dashboard_id",
         "clairview_dashboarditem"."last_refresh",
         "clairview_dashboarditem"."layouts",
         "clairview_dashboarditem"."color",
         "clairview_dashboarditem"."dive_dashboard_id",
         "clairview_dashboarditem"."updated_at",
         "clairview_dashboarditem"."deprecated_tags",
         "clairview_dashboarditem"."tags",
         "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_annotation"
  LEFT OUTER JOIN "clairview_dashboarditem" ON ("clairview_annotation"."dashboard_item_id" = "clairview_dashboarditem"."id")
  LEFT OUTER JOIN "clairview_user" ON ("clairview_annotation"."created_by_id" = "clairview_user"."id")
  WHERE (NOT "clairview_annotation"."deleted"
         AND (("clairview_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "clairview_annotation"."scope" = 'organization')
              OR "clairview_annotation"."team_id" = 2))
  ORDER BY "clairview_annotation"."date_marker" DESC
  LIMIT 1000
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.9
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
